Trying to fix the landscape extra white space on the sides by taking away overflow-x and resetting the width property to viewport units

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,8 +5,7 @@
 ///GENERAL///
 ///////////*/
 body {
-  max-width: 100%;
-  overflow-x: hidden;
+  width: 100vw;
 }
 
 a {
@@ -62,7 +61,6 @@ h1, h3 {
   justify-content: flex-start;
   align-items: center;
   background-color: var(--blue);
-  overflow-x: hidden;
 }
 
 /*/////////
